--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-authors = ["LongYinan <lynweklm@gmail.com>"]
+authors = ["INS <j893412899@outlook.com>"]
 edition = "2018"
-name = "napi-package-template"
+name = "vibes-pdf-utils"
 version = "0.1.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -12,6 +12,7 @@ crate-type = ["cdylib"]
 [dependencies]
 napi = "1"
 napi-derive = "1"
+lopdf = "0.26.0"
 
 [target.'cfg(all(unix, not(target_env = "musl"), not(target_arch = "aarch64"), not(target_arch = "arm")))'.dependencies]
 jemallocator = {version = "0.3", features = ["disable_initial_exec_tls"]}
