--- a/npm/freebsd-x64/package.json
+++ b/npm/freebsd-x64/package.json
@@ -1,12 +1,25 @@
 {
   "name": "@napi-rs/package-template-freebsd-x64",
   "version": "1.0.0",
-  "os": ["freebsd"],
-  "cpu": ["x64"],
+  "os": [
+    "freebsd"
+  ],
+  "cpu": [
+    "x64"
+  ],
   "main": "package-template.freebsd-x64.node",
-  "files": ["package-template.freebsd-x64.node"],
+  "files": [
+    "package-template.freebsd-x64.node"
+  ],
   "description": "Template project for writing node package with napi-rs",
-  "keywords": ["napi-rs", "NAPI", "N-API", "Rust", "node-addon", "node-addon-api"],
+  "keywords": [
+    "napi-rs",
+    "NAPI",
+    "N-API",
+    "Rust",
+    "node-addon",
+    "node-addon-api"
+  ],
   "license": "MIT",
   "engines": {
     "node": ">= 10"
