--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -201,7 +201,7 @@ jobs:
     runs-on: ubuntu-20.04
     needs:
       - build
-#      - build-freebsd
+      - build-freebsd
 
     steps:
       - uses: actions/checkout@v2
