--- a/.github/workflows/CI.yaml
+++ b/.github/workflows/CI.yaml
@@ -2,7 +2,7 @@ name: CI
 
 env:
   DEBUG: 'napi:*'
-  APP_NAME: 'ins-pdf-utils-test'
+  APP_NAME: 'package-template'
   MACOSX_DEPLOYMENT_TARGET: '10.13'
 
 on:
