--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ins-pdf-utils-test",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Template project for writing node package with napi-rs",
   "main": "index.js",
   "repository": "git@github.com:napi-rs/package-template.git",
@@ -53,7 +53,7 @@
     "format:source": "prettier --config ./package.json --write './**/*.{js,ts}'",
     "format:yaml": "prettier --parser yaml --write './**/*.{yml,yaml}'",
     "lint": "eslint . -c ./.eslintrc.yml './**/*.{ts,tsx,js}'",
-    "prepublishOnly": "napi prepublish -t npm",
+    "prepublishOnly": "GITHUB_REPOSITORY=Vibes-INS/ins-pdf-utils napi prepublish -t npm",
     "test": "echo Test",
     "version": "napi version"
   },
